--- a/evm/index.html
+++ b/evm/index.html
@@ -1,236 +1,174 @@
 <!doctype html>
+
 <html lang="id">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Tambah Jaringan ke Wallet</title>
-<style>
-  body {
-    margin:0; font-family: 'Segoe UI', Arial, sans-serif;
-    background:#0f172a; color:#f8fafc;
-  }
-  .container {
-    min-height:100vh; display:flex; flex-direction:column;
-    padding:20px; box-sizing:border-box;
-  }
-  h1 { margin:0 0 10px 0; font-size:1.6rem; }
-  p.desc { font-size:0.95rem; color:#94a3b8; margin-bottom:20px; }
-  .field {
-    background:#1e293b; border-radius:10px;
-    padding:12px; margin-bottom:14px;
-  }
-  .label {
-    font-size:0.8rem; color:#94a3b8; margin-bottom:6px;
-  }
-  .value {
-    display:flex; gap:10px; flex-wrap:wrap;
-  }
-  .value input {
-    flex:1; font-size:0.95rem; padding:6px 8px;
-    background:#0f172a; color:#f1f5f9; border:1px solid #334155;
-    border-radius:6px;
-  }
-  .paste-btn {
-    background:#334155; border:0; color:#f1f5f9;
-    border-radius:6px; padding:6px 10px;
-    cursor:pointer; font-size:0.8rem;
-  }
-  .paste-btn:hover { background:#475569; }
-  .btn {
-    padding:14px; font-size:1rem; font-weight:600;
-    border-radius:8px; border:0; cursor:pointer;
-    margin-top:auto;
-  }
-  .primary { background:#06b6d4; color:#0f172a; }
-  .primary:hover { background:#0ea5e9; }
-  .msg { font-size:0.9rem; margin-top:14px; }
-  .error { color:#f87171; }
-  .success { color:#34d399; }
-  .chainid-wrapper {
-  display: flex;
-  gap: 6px;
-  flex: 1;
-  flex-wrap: wrap; /* Biar kalau sempit, pindah baris */
-}
-
-.chainid-wrapper input {
-  flex: 1 1 140px; /* Minimal lebar 140px, sisanya fleksibel */
-}
-
-/* Tambahan: biar tombol paste di sebelah tidak terlalu jauh di HP */
-@media (max-width: 500px) {
-  .value {
-    flex-direction: column;
-    gap: 8px;
-  }
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Add Ethereum Chain — Giwa Network</title>
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:24px;background:#f7fafc;color:#0f172a}
+    .card{max-width:900px;margin:0 auto;background:white;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.08)}
+    textarea{width:100%;height:160px;padding:12px;border-radius:8px;border:1px solid #e6eef6;font-family:monospace;resize:vertical}
+    label{font-weight:600;margin-bottom:6px;display:block}
+    .row{display:flex;gap:10px;align-items:center}
+    button{background:#0ea5a0;border:none;padding:10px 16px;border-radius:8px;color:white;font-weight:600;cursor:pointer}
+    button[disabled]{opacity:.6;cursor:not-allowed}
+    pre{background:#0f172a;color:#e6eef6;padding:12px;border-radius:8px;overflow:auto}
+    .muted{color:#64748b;font-size:13px}
+    .out{margin-top:12px}
+  </style>
 </head>
 <body>
-<div class="container">
-  <h1>Tambahkan Jaringan ke Wallet</h1>
-  <p class="desc">Isi data jaringan di bawah, lalu klik tombol untuk menambahkannya ke wallet Anda.</p>
-  
-  <div class="field">
-    <div class="label">Nama Jaringan</div>
-    <div class="value">
-      <input id="valName" placeholder="Contoh: Polygon Mainnet">
-      <button class="paste-btn" data-paste="valName">Paste</button>
-    </div>
-  </div>
-  
-  <div class="field">
-    <div class="label">Chain ID</div>
-    <div class="value">
-      <div class="chainid-wrapper">
-        <input id="valChainDec" placeholder="Desimal (contoh: 137)">
-        <input id="valChainHex" placeholder="Hex (contoh: 0x89)">
-      </div>
-      <button class="paste-btn" data-paste="valChainDec">Paste Dec</button>
-      <button class="paste-btn" data-paste="valChainHex">Paste Hex</button>
-    </div>
-  </div>
-  
-  <div class="field">
-    <div class="label">RPC URL</div>
-    <div class="value">
-      <input id="valRPC" placeholder="https://...">
-      <button class="paste-btn" data-paste="valRPC">Paste</button>
-    </div>
-  </div>
-  
-  <div class="field">
-    <div class="label">Nama Mata Uang</div>
-    <div class="value">
-      <input id="valCurrency" placeholder="Contoh: MATIC">
-      <button class="paste-btn" data-paste="valCurrency">Paste</button>
-    </div>
-  </div>
-  
-  <div class="field">
-    <div class="label">Simbol</div>
-    <div class="value">
-      <input id="valSymbol" placeholder="Contoh: MATIC">
-      <button class="paste-btn" data-paste="valSymbol">Paste</button>
-    </div>
-  </div>
-  
-  <div class="field">
-    <div class="label">Block Explorer URL (Opsional)</div>
-    <div class="value">
-      <input id="valExplorer" placeholder="https://explorer...">
-      <button class="paste-btn" data-paste="valExplorer">Paste</button>
-    </div>
-  </div>
-  
-  <button id="addBtn" class="btn primary">Tambahkan ke Wallet</button>
-  <div id="status" class="msg"></div>
+  <div class="card">
+    <h1>Add Chain to Wallet</h1>
+    <p class="muted">Tempel JSON konfigurasi chain di bawah (atau gunakan tombol <em>Use example</em>), lalu klik <strong>Add Chain</strong> untuk memicu wallet seperti MetaMask.</p><label for="chainJson">Chain JSON</label>
+<textarea id="chainJson" aria-label="Chain JSON"></textarea>
+
+<div class="row out">
+  <button id="useExample">Use example</button>
+  <button id="addChainBtn">Add Chain</button>
+  <button id="clearBtn">Clear</button>
 </div>
 
-<script>
-  const statusEl = document.getElementById('status');
-  const decInput = document.getElementById('valChainDec');
-  const hexInput = document.getElementById('valChainHex');
-  let lastEdited = null;
+<div class="out">
+  <label>Status</label>
+  <pre id="log">Ready.
 
-  function setStatus(msg, type) {
-    statusEl.textContent = msg;
-    statusEl.className = 'msg ' + (type || '');
-  }
+Notes: • This page calls window.ethereum.request and requires a web3 wallet (e.g. MetaMask). • The JSON you paste can be either EIP-3085-format or the simpler format used earlier. • Example simple format keys supported: networkName, rpcUrl, chainId, currencySymbol, blockExplorerUrl • EIP-3085 full format supported too: chainId (hex or number), chainName, rpcUrls, nativeCurrency, blockExplorerUrls </pre> </div>
 
-  // Konversi
-  function decToHex(dec) {
-    if (!/^\d+$/.test(dec)) return '';
-    return '0x' + parseInt(dec, 10).toString(16);
-  }
-  function hexToDec(hex) {
-    if (!/^0x[0-9a-fA-F]+$/.test(hex)) return '';
-    return parseInt(hex, 16).toString(10);
-  }
+  </div>  <script>
+    const textarea = document.getElementById('chainJson')
+    const logEl = document.getElementById('log')
+    const addBtn = document.getElementById('addChainBtn')
+    const useExample = document.getElementById('useExample')
+    const clearBtn = document.getElementById('clearBtn')
 
-  decInput.addEventListener('input', () => {
-    lastEdited = 'dec';
-    const hex = decToHex(decInput.value.trim());
-    hexInput.value = hex || '';
-  });
-
-  hexInput.addEventListener('input', () => {
-    lastEdited = 'hex';
-    const dec = hexToDec(hexInput.value.trim());
-    decInput.value = dec || '';
-  });
-
-  function getNormalizedChainId() {
-    if (lastEdited === 'hex') return hexInput.value.trim().toLowerCase();
-    if (lastEdited === 'dec') return decToHex(decInput.value.trim());
-    return '';
-  }
-
-  // Tombol paste dari clipboard
-  document.querySelectorAll('.paste-btn').forEach(btn => {
-    btn.addEventListener('click', async () => {
-      const id = btn.getAttribute('data-paste');
-      try {
-        const text = await navigator.clipboard.readText();
-        document.getElementById(id).value = text;
-        document.getElementById(id).dispatchEvent(new Event('input'));
-        setStatus(`Ditempel ke ${id}: ${text}`, 'success');
-        setTimeout(() => setStatus('', ''), 2000);
-      } catch {
-        setStatus('Gagal membaca clipboard.', 'error');
-      }
-    });
-  });
-
-  // Tambah jaringan
-  document.getElementById('addBtn').addEventListener('click', async () => {
-    if (!window.ethereum) {
-      setStatus('Wallet tidak terdeteksi.', 'error');
-      return;
+    const example = {
+      "networkName": "Giwa Network",
+      "rpcUrl": "https://sepolia-rpc.giwa.io",
+      "chainId": 91342,
+      "currencySymbol": "ETH",
+      "blockExplorerUrl": "https://sepolia-explorer.giwa.io"
     }
 
-    const chainId = getNormalizedChainId();
-    const chainName = document.getElementById('valName').value.trim();
-    const rpcUrl = document.getElementById('valRPC').value.trim();
-    const currencyName = document.getElementById('valCurrency').value.trim();
-    const symbol = document.getElementById('valSymbol').value.trim();
-    const explorer = document.getElementById('valExplorer').value.trim();
+    function log(...args){
+      const time = new Date().toLocaleTimeString()
+      logEl.textContent = `[${time}] ` + args.join(' ') + '\n' + logEl.textContent
+    }
 
-    const networkParams = {
-      chainId,
-      chainName,
-      rpcUrls: [rpcUrl],
-      nativeCurrency: {
-        name: currencyName,
-        symbol: symbol,
-        decimals: 18
+    useExample.addEventListener('click', ()=>{
+      textarea.value = JSON.stringify(example, null, 2)
+      log('Inserted example JSON')
+    })
+
+    clearBtn.addEventListener('click', ()=>{
+      textarea.value = ''
+      log('Cleared textarea')
+    })
+
+    function toHexChainId(value){
+      // Accept number or hex string
+      if (typeof value === 'number') return '0x' + value.toString(16)
+      if (typeof value === 'string'){
+        if (value.startsWith('0x')) return value
+        // maybe decimal string
+        const n = Number(value)
+        if (!Number.isNaN(n)) return '0x' + n.toString(16)
+        // fallback, return as-is
+        return value
       }
-    };
-    if (explorer) networkParams.blockExplorerUrls = [explorer];
+      return value
+    }
 
-    setStatus('Meminta wallet...', '');
-    try {
-      await window.ethereum.request({
-        method: 'wallet_switchEthereumChain',
-        params: [{ chainId }]
-      });
-      setStatus(`Berhasil berpindah ke jaringan ${chainName}.`, 'success');
-    } catch (switchError) {
-      if (switchError.code === 4902) {
-        try {
-          await window.ethereum.request({
-            method: 'wallet_addEthereumChain',
-            params: [networkParams]
-          });
-          setStatus('Jaringan berhasil ditambahkan.', 'success');
-        } catch (addError) {
-          setStatus(addError.code === 4001 ? 'Dibatalkan oleh pengguna.' : 'Gagal menambahkan jaringan.', 'error');
+    function buildEip3085FromSimple(obj){
+      // map the simple keys to EIP-3085 fields
+      const chainId = obj.chainId ?? obj.chain_id
+      const rpcUrl = obj.rpcUrl ?? obj.rpc_url ?? obj.rpcUrls ?? obj.rpc_url_s ?? obj.rpc
+      const name = obj.networkName ?? obj.chainName ?? obj.chain_name
+      const symbol = obj.currencySymbol ?? obj.nativeCurrency?.symbol ?? (obj.currency && obj.currency.symbol)
+      const explorer = obj.blockExplorerUrl ?? obj.block_explorer_url ?? obj.blockExplorerUrls
+
+      const params = {
+        chainId: toHexChainId(chainId),
+        chainName: name || 'Custom Network',
+        rpcUrls: rpcUrl ? (Array.isArray(rpcUrl) ? rpcUrl : [rpcUrl]) : [],
+        nativeCurrency: {
+          name: symbol ? symbol : 'ETH',
+          symbol: symbol ? symbol : 'ETH',
+          decimals: 18
+        },
+        blockExplorerUrls: explorer ? (Array.isArray(explorer) ? explorer : [explorer]) : []
+      }
+      return params
+    }
+
+    async function addChain(){
+      if (!window.ethereum){
+        log('window.ethereum not found. Install MetaMask or another EIP-1193 wallet.')
+        alert('No web3 wallet detected. Install MetaMask or use a compatible browser extension.')
+        return
+      }
+
+      let userInput = textarea.value.trim()
+      if (!userInput){ log('No input.'); alert('Paste a JSON configuration first.'); return }
+
+      let parsed
+      try{
+        parsed = JSON.parse(userInput)
+      }catch(e){
+        log('JSON parse error:', e.message)
+        alert('Invalid JSON. Check formatting in the textarea.')
+        return
+      }
+
+      // If parsed already looks like EIP-3085, use it; otherwise convert
+      let addParams
+      if (parsed && (parsed.chainId && (parsed.rpcUrls || parsed.rpcUrl || parsed.rpc_urls)) ){
+        // normalize
+        addParams = {
+          chainId: toHexChainId(parsed.chainId),
+          chainName: parsed.chainName || parsed.networkName || 'Custom Network',
+          rpcUrls: parsed.rpcUrls || (parsed.rpcUrl ? (Array.isArray(parsed.rpcUrl) ? parsed.rpcUrl : [parsed.rpcUrl]) : []),
+          nativeCurrency: parsed.nativeCurrency || { name: parsed.currencyName || parsed.currencySymbol || 'ETH', symbol: parsed.currencySymbol || 'ETH', decimals: parsed.nativeCurrency?.decimals ?? 18 },
+          blockExplorerUrls: parsed.blockExplorerUrls || (parsed.blockExplorerUrl ? (Array.isArray(parsed.blockExplorerUrl) ? parsed.blockExplorerUrl : [parsed.blockExplorerUrl]) : [])
         }
       } else {
-        setStatus(switchError.code === 4001 ? 'Dibatalkan oleh pengguna.' : 'Gagal berpindah jaringan.', 'error');
+        addParams = buildEip3085FromSimple(parsed)
+      }
+
+      // minimal validation
+      if (!addParams.chainId || addParams.rpcUrls.length === 0){
+        log('Missing chainId or rpcUrls in parsed params:', JSON.stringify(addParams))
+        alert('Parsed configuration must include chainId and at least one rpcUrl.')
+        return
+      }
+
+      log('Requesting wallet_addEthereumChain with:', JSON.stringify(addParams))
+      addBtn.disabled = true
+      try{
+        await window.ethereum.request({
+          method: 'wallet_addEthereumChain',
+          params: [addParams]
+        })
+        log('Success: chain added or user approved addition')
+        alert('Chain added (or approved) successfully.')
+      }catch(err){
+        // nicer error reporting for common cases
+        log('Error', err && err.message ? err.message : err)
+        if (err && err.code === 4001){
+          log('User rejected the request (4001)')
+          alert('Action rejected by user in wallet.')
+        } else {
+          alert('Failed to add chain. See console/log for details.\nError: ' + (err && err.message ? err.message : String(err)))
+        }
+      } finally {
+        addBtn.disabled = false
       }
     }
-  });
-</script>
-</body>
+
+    addBtn.addEventListener('click', addChain)
+
+    // insert example by default (optional)
+    textarea.value = JSON.stringify(example, null, 2)
+  </script></body>
 </html>
