--- a/evm/index.html
+++ b/evm/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Add / Switch Chain</title>
+  <title>Add / Switch EVM Chain</title>
   <style>
     body{font-family:system-ui,Segoe UI,Roboto,Arial;margin:24px;background:#f7fafc;color:#111827}
-    .card{max-width:700px;margin:0 auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08)}
-    textarea{width:100%;height:160px;padding:12px;border-radius:8px;border:1px solid #e6eef6;font-family:monospace;resize:vertical}
+    .card{max-width:800px;margin:0 auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,0.08)}
+    textarea{width:100%;height:200px;padding:12px;border-radius:8px;border:1px solid #e6eef6;font-family:monospace;resize:vertical}
     button{padding:0.7rem 1.2rem;font-size:1rem;border-radius:10px;border:0;background:#2563eb;color:white;cursor:pointer}
     button:active{transform:translateY(1px)}
     .msg{margin-top:12px;text-align:left;font-size:0.95rem;color:#374151;white-space:pre-wrap}
@@ -15,11 +15,11 @@
 </head>
 <body>
   <div class="card">
-    <h2>Tambah / Switch Jaringan</h2>
-    <p>Tempel konfigurasi JSON (format EIP-3085) lalu klik tombol.</p>
+    <h2>Tambah / Switch EVM Chain</h2>
+    <p>Tempel konfigurasi JSON chain sesuai <b>EIP-3085</b> lalu klik tombol.</p>
     <textarea id="chainJson"></textarea>
     <div style="margin-top:12px">
-      <button id="useExample">Gunakan Giwa Example</button>
+      <button id="useExample">Gunakan Contoh Giwa</button>
       <button id="addSwitchBtn">Add / Switch Chain</button>
     </div>
     <div class="msg" id="msg"></div>
@@ -31,7 +31,7 @@
     const useExample = document.getElementById('useExample');
     const textarea = document.getElementById('chainJson');
 
-    // Contoh Giwa dalam format EIP-3085
+    // Contoh Giwa Network
     const GIWA = {
       chainId: "0x1650e", // 91342
       chainName: "Giwa Network",
@@ -47,6 +47,16 @@
     function show(msg, isError=false){
       msgEl.textContent = msg;
       msgEl.style.color = isError ? '#b91c1c' : '#374151';
+    }
+
+    function toHexChainId(value){
+      if (typeof value === "number") return "0x" + value.toString(16);
+      if (typeof value === "string"){
+        if (value.startsWith("0x")) return value;
+        const n = Number(value);
+        if (!Number.isNaN(n)) return "0x" + n.toString(16);
+      }
+      return value;
     }
 
     useExample.addEventListener('click', ()=>{
@@ -68,18 +78,21 @@
         return;
       }
 
+      // pastikan chainId berbentuk hex
+      parsed.chainId = toHexChainId(parsed.chainId);
+
       if (!parsed.chainId || !parsed.rpcUrls){
         show('Config harus ada chainId dan rpcUrls (format EIP-3085).', true);
         return;
       }
 
       try {
-        // Coba switch dulu
+        // coba switch dulu
         await window.ethereum.request({
           method: 'wallet_switchEthereumChain',
           params: [{ chainId: parsed.chainId }]
         });
-        show('Berhasil switch ke ' + parsed.chainName + ' ✅');
+        show(`Berhasil switch ke ${parsed.chainName || parsed.chainId} ✅`);
       } catch (switchError){
         if (switchError.code === 4902 || /Unrecognized chain/i.test(switchError.message)){
           try {
@@ -87,7 +100,7 @@
               method: 'wallet_addEthereumChain',
               params: [parsed]
             });
-            show('Chain berhasil ditambahkan dan di-switch ✅');
+            show(`${parsed.chainName || parsed.chainId} berhasil ditambahkan dan di-switch ✅`);
           } catch (addError){
             console.error(addError);
             show('Gagal menambahkan chain: ' + (addError.message || addError), true);
@@ -101,7 +114,7 @@
 
     btn.addEventListener('click', addOrSwitch);
 
-    // auto isi Giwa default
+    // auto isi contoh default Giwa
     textarea.value = JSON.stringify(GIWA, null, 2);
   </script>
 </body>
